[NWPS-1618] [NWPS-1619] (1) Removing 's' suffix from '/content/documents/administration/valuelists/featuredcontenttypes' labels for Blog post and News article, (2) 'uk.nhs.hee.web.validation.validator.MandatoryFeaturedMethodValidator' class tidy-up, (3) Adding content type to feature content title mapping for 'hee:blogPost' & 'hee:news' document types, (4) Updating 'uk.nhs.hee.web.services.uk.nhs.hee.web.services' class to use '__with_ancestors' suffixed taxonomy field in the search query to include documents which doesn't have ancestors chosen in their taxonomy fields.